--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Minimum CMake version required
-cmake_minimum_required(VERSION 3.30)
+cmake_minimum_required(VERSION 3.10)
 
 # Project name and version
 project(Test)
@@ -9,6 +9,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(THREADS_PREFER_PTHREAD_FLAG ON)
+set(CMAKE_BUILD_TYPE Debug)
 # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --target=x86_64-w64-mingw32")
 # set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --target=x86_64-w64-mingw32")
 set(IMGUI_DIR ./externals/imgui/)
@@ -18,7 +19,7 @@ file(GLOB IMPLOT_SRC "${IMPLOT_DIR}/*.cpp")
 file(GLOB SOURCES "${PROJECT_SOURCE_DIR}/src/*.cpp" "${PROJECT_SOURCE_DIR}/src/*.c")
 
 # Add the executable (the source file is main.cpp)
-add_executable(ThreadPlot ${SOURCES} ${IMGUI_SRC} ${IMPLOT_SRC})
+add_executable(ThreadPlot ${SOURCES} ${PROJECT_SOURCE_DIR}/src/glad.c ${IMGUI_SRC} ${IMPLOT_SRC})
 target_include_directories(ThreadPlot PRIVATE ${PROJECT_SOURCE_DIR}/include)
 
 target_include_directories(ThreadPlot PRIVATE ${IMGUI_DIR} ${IMGUI_DIR}/backends/ ${IMPLOT_DIR})
@@ -31,3 +32,6 @@ find_package(glfw3 3.4 REQUIRED)
 find_package(glm REQUIRED)
 target_link_libraries(ThreadPlot glfw glm::glm)
 target_link_libraries(ThreadPlot OpenGL::GL)
+target_link_libraries(ThreadPlot OpenGL::GLU)
+
+# set_property(TARGET ThreadPlot PROPERTY CXX_STANDARD 17)
